--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 
     </div>
 
+    <div class="row">
+      <div class="volSliderContainer">
+        <p id="volLabel">Volume: </p>
+        <input type="range" min="1" max="100" value="50" class="slider" id="volSlider">
+      </div>
+      <div class="startButtonContainer">
+        <button id="startBtn">Start game!</button>
+      </div>
+    </div>
+
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
